# uamself_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/ basis/cargo_02/: Cargo.toml
crates/ basis/data_type_05/: Cargo.toml
crates/ basis/literals_operators_06/: Cargo.toml
crates/ basis/literals_operators_06/src/: main.rs
crates/ basis/specification_03/src/: main.rs
crates/ basis/variables_04/: Cargo.toml
crates/ basis/variables_04/src/: main.rs
crates/basis/composite_data_type_09/: Cargo.toml
crates/basis/composite_data_type_09/src/: main.rs
crates/basis/data_type_05/src/: main.rs
crates/basis/enum_18/: Cargo.toml
crates/basis/enum_18/src/: main.rs
crates/basis/function_15/: Cargo.toml
crates/basis/function_15/src/: lib.rs  main.rs
crates/basis/hello_world_01/: Cargo.toml
crates/basis/input_output_08/: Cargo.toml
crates/basis/iterator_16/: Cargo.toml
crates/basis/process_control_14/: Cargo.toml
crates/basis/slice_11/: Cargo.toml
crates/basis/specification_03/: Cargo.toml
crates/basis/string_12/: Cargo.toml
crates/basis/string_method_13/: Cargo.toml
crates/basis/struct_17/: Cargo.toml
crates/basis/type_cast_07/: Cargo.toml
crates/basis/vector_10/: Cargo.toml
demo/src/: main.rs
mds/: data_type_05.md  enum_18.md  function_15.md  input_output_08.md  iterator_16.md  process_control_14.md  slice_11.md  string_12.md  struct_17.md  vector_10.md
mds/basis/: cargo_02.md  composite_data_type_09.md  literals_operators_06.md  specification_03.md  string_12.md  string_method_13.md  type_cast_07.md  variables_04.md
(+8 files in other folders)
