# 最外层的项目,只有工作空间没有package, 这里可以通过workspace引入其他的package

[workspace]
resolver = "2" # 不明白这个的作用
members = [
    "crates/basis/hello_world_01",
    "crates/basis/cargo_02",
    "crates/basis/specification_03",
    "crates/basis/variables_04",
    "crates/basis/data_type_05",
    "crates/basis/literals_operators_06",
    "crates/basis/type_cast_07",
    "crates/basis/input_output_08",
    "crates/basis/composite_data_type_09",
    "crates/basis/vector_10",
    "crates/basis/slice_11",
    "crates/basis/string_12",
    "crates/basis/string_method_13",
    "crates/basis/process_control_14",
    "crates/basis/function_15",
    "crates/basis/iterator_16",
    "crates/basis/struct_17",
    "crates/basis/enum_18",
]